--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -10,33 +10,33 @@
          maxHeight="1.7976931348623157E308"
          maxWidth="1.7976931348623157E308"
          prefWidth="400.0"
+         stylesheets="@../css/dialog-box.css"
          type="javafx.scene.layout.HBox"
          xmlns="http://javafx.com/javafx/17"
-         xmlns:fx="http://javafx.com/fxml/1">
+         xmlns:fx="http://javafx.com/fxml/1" >
     <children>
-        <VBox spacing="5" maxHeight="30.0">
+        <VBox fx:id="dialogBubble"
+              styleClass="dialog-bubble"
+              maxHeight="30.0"
+              spacing="5">
             <children>
                 <Label fx:id="dialog"
-                       text="Label"
-                       wrapText="true"
                        minHeight="-Infinity"
-                       maxWidth="240.0" />
+                       text="Label"
+                       wrapText="true" />
             </children>
             <padding>
-                <Insets top="7.0" right="10.0" bottom="7.0" left="10.0"/>
+                <Insets bottom="7.0"left="10.0" right="10.0" top="7.0" />
             </padding>
-            <style>
-                -fx-background-color: lightgray;
-                -fx-background-radius: 10;
-            </style>
         </VBox>
-        <ImageView fx:id="displayPicture" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" >
+        <ImageView fx:id="displayPicture"
+                   fitHeight="60.0"
+                   fitWidth="60.0"
+                   pickOnBounds="true"
+                   preserveRatio="true">
             <HBox.margin>
-                <Insets top="0" right="5.0" bottom="0" left="5.0"/>
+                <Insets bottom="0" right="5.0" top="0" left="5.0" />
             </HBox.margin>
         </ImageView>
     </children>
-    <padding>
-        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-    </padding>
 </fx:root>
