--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -4,7 +4,7 @@
 }
 
 .text-field {
-    -fx-background-color: #e8efff;
+    -fx-background-color: #d3dbeb;
     -fx-font: 14px "Book Antiqua";
 }
 
@@ -16,7 +16,6 @@
 
 .button:pressed {
     -fx-background-color: #d3a518;
-    -fx-text-fill: white;
     -fx-font-size: 16px;
 }
 
